Implement back unit tests